--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "ncurses.h": "c",
     "locale.h": "c",
-    "string.h": "c"
-  }
+    "string.h": "c",
+    "initializer_list": "c"
+}
 }
