--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "ncurses.h": "c",
     "locale.h": "c",
     "string.h": "c",
-    "initializer_list": "c"
-}
+    "initializer_list": "c",
+    "cmath": "c"
+  }
 }
